Thay đổi cấu trúc thư mục

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -21,11 +21,11 @@
 
 #### Mô hình cài đặt giám sát các host như sau:
 
-<img src="../images/topo.png" />
+<img src="../../images/topo.png" />
 
 #### Bảng phân IP cho các host
 
-<img src="../images/IP-Planning.png" />
+<img src="../../images/IP-Planning.png" />
 
 Link docs: https://goo.gl/yOim1o
 
@@ -139,11 +139,11 @@ vi /etc/xinetd.d/nrpe
 
 ```
 ...
-only_from = 127.0.0.1 192.168.100.138
+only_from = 127.0.0.1 192.168.100.196
 ...
 ```
 
-**Chú ý**: `192.168.100.138` là địa chỉ Nagios Server của bạn
+**Chú ý**: `192.168.100.196` là địa chỉ Nagios Server của bạn
 
 <a name="2.3"></a>
 #### 2.3 Khởi động Nagios Server
@@ -229,12 +229,12 @@ Vào giao diện Web để kiểm tra
 <a name="2.5"></a>
 #### 2.5 Giám sát MySQL
 
-Vui lòng bấm vào [đây](../docs/services/Monitor-MySQL.md).
+Vui lòng bấm vào [đây](4.Monitor-MySQL.md).
 
 <a name="2.6"></a>
 #### 2.6 Giám sát RabbitMQ
 
-Vui lòng bấm vào [đây](../docs/services/Monitor-RabbitMQ.md).
+Vui lòng bấm vào [đây](5.Monitor-RabbitMQ.md).
 
 <a name="3"></a>
 ### 3. Tham khảo
