--- a/docs/thuchanh-nagios/1.Setup-Ubuntu-16.04.md
+++ b/docs/thuchanh-nagios/1.Setup-Ubuntu-16.04.md
@@ -24,11 +24,11 @@
 
 #### Mô hình cài đặt giám sát các host như sau:
 
-<img src="../images/topo.png" />
+<img src="../../images/topo.png" />
 
 #### Bảng phân IP cho các host
 
-<img src="../images/IP-Planning.png" />
+<img src="../../images/IP-Planning.png" />
 
 Link docs: https://goo.gl/yOim1o
 
@@ -159,11 +159,11 @@ vi /etc/xinetd.d/nrpe
 
 ```
 ...
-only_from = 127.0.0.1 192.168.100.138
+only_from = 127.0.0.1 192.168.100.196
 ...
 ```
 
-**Chú ý**: `192.168.100.138` là địa chỉ Nagios Server của bạn
+**Chú ý**: `192.168.100.196` là địa chỉ Nagios Server của bạn
 
 <a name="2.3"></a>
 #### 2.3 Khởi động Nagios Server
@@ -181,7 +181,7 @@ systemctl start nagios
 http://địa-chỉ-ip/nagios
 ```
 
-<img src="../images/nagios1.png" />
+<img src="../../images/nagios1.png" />
 
 <a name="2.4"></a>
 #### 2.4 Cấu hình giám sát 1 host Linux
@@ -244,17 +244,17 @@ systemctl restart nagios
 
 Vào giao diện Web để kiểm tra
 
-<img src="../images/nagios2.png" />
+<img src="../../images/nagios2.png" />
 
 <a name="2.5"></a>
 #### 2.5 Giám sát MySQL
 
-Vui lòng bấm vào [đây](../docs/services/Monitor-MySQL.md).
+Vui lòng bấm vào [đây](4.Monitor-MySQL.md).
 
 <a name="2.6"></a>
 #### 2.6 Giám sát RabbitMQ
 
-Vui lòng bấm vào [đây](../docs/services/Monitor-RabbitMQ.md).
+Vui lòng bấm vào [đây](5.Monitor-RabbitMQ.md).
 
 <a name="3"></a>
 ### 3. Tham khảo
