--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -1,5 +1,7 @@
 ## Monitor RabbitMQ trong nagios
 
+** Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS không thành công!**
+
 ### Nội dung
 
 - [ 1. Thông tin host ](#1)
@@ -11,7 +13,7 @@
 ### 1. Thông tin host RabbitMQ
 
 ```
-OS: CentOS 7
+OS: Ubuntu 16.04
 IP: 192.168.100.198
 Hostname: node1
 Service: RabbitMQ
