Cập nhật thư mục

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -161,7 +161,7 @@ service nagios restart
 http://địa-chỉ-ip/nagios
 ```
 
-<img src="../images/nagios1.png" />
+<img src="../../images/nagios1.png" />
 
 <a name="2.4"></a>
 #### 2.4 Cấu hình giám sát 1 host Linux
@@ -224,7 +224,7 @@ systemctl restart nagios
 
 Vào giao diện Web để kiểm tra
 
-<img src="../images/nagios2.png" />
+<img src="../../images/nagios2.png" />
 
 <a name="2.5"></a>
 #### 2.5 Giám sát MySQL
