--- a/docs/thuchanh-nagios/4.Monitor-MySQL.md
+++ b/docs/thuchanh-nagios/4.Monitor-MySQL.md
@@ -51,7 +51,7 @@ GRANT usage ON *.* TO 'checker'@'192.168.100.196' IDENTIFIED BY '123';
 ```
 
 - `nagios` : Tên của user dùng cho icinga2 có thể truy xuất vào DB
-- `n123` : Mật khẩu của `checker` (Tùy chọn)
+- `123` : Mật khẩu của `checker` (Tùy chọn)
 - `192.168.100.196` : Địa chỉ IP của Nagios Server
 
 Như vậy là ta đã hoàn thành công việc ở host DB.
