--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -1,6 +1,6 @@
 ## Monitor RabbitMQ trong nagios
 
-** Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS không thành công!**
+**Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS không thành công!**
 
 ### Nội dung
 
@@ -13,7 +13,7 @@
 ### 1. Thông tin host RabbitMQ
 
 ```
-OS: Ubuntu 16.04
+OS: CentOS 7
 IP: 192.168.100.198
 Hostname: node1
 Service: RabbitMQ
