Kiểm tra chính tả

--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -23,7 +23,7 @@ Service: RabbitMQ
 
 #### 2.1 Chuẩn bị
 
-#### Cài đặt perl và gói `Monitoring::Plugins`
+#### Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server
 
 ```sh
 curl -L http://cpanmin.us | perl - --sudo App::cpanminus
@@ -33,7 +33,7 @@ perl -MCPAN -e 'install JSON'
 perl -MCPAN -e 'install Math::Calc::Units'
 ```
 
-Lưu ý: Khi lần đầu chạy lệnh trên, CPAN sẽ yêu cầu một số thiết lập, bấm Enter để nhập mặc định.
+**Lưu ý**: Khi lần đầu chạy lệnh trên, CPAN sẽ yêu cầu một số thiết lập, bấm Enter để nhập mặc định.
 
 #### 2.2 Cài đặt Plugin
 
