--- a/docs/lythuyet-nagios/2.Dashboard.md
+++ b/docs/lythuyet-nagios/2.Dashboard.md
@@ -9,7 +9,8 @@
 		- [2.3.1 Thông tin cụ thể của host](#231)
 		- [2.3.2 Host command](#232)
 	- [2.4 Services](#24)
-		-[2.4.1 Thông tin chi tiết của 1 service](#241)
+		- [2.4.1 Thông tin chi tiết của 1 service](#241)
+		- [2.4.2 Service command](#242)
 	- [2.5 Host group](#25)
 - [3. Reports](#3)
 - [4. System](#4)
@@ -89,23 +90,23 @@ Thể hiện 1 cách tổng quan về các trạng thái giám sát
 #### 2.3.2 Host command
 Các host command thực thi 1 lệnh đến host 
 <ul>
-<li>Locate host on map: command này sẽ dẫn đến map của hệ thống giám sát</li>
-<li>Disable active checks of this host: command này sẽ disable ngay lập tức active check host</li>
-<li>Re-schedule the next check of this host: Thay đổi lịch trình lần check tiếp theo của host</li>
-<li>Submit passive check result for this host: Lệnh này gửi kết quả check passive cho 1 máu chủ cụ thể</li>
-<li>Stop accepting passive checks for this host: Ngừng chấp nhận check passive cho máy chủ này</li>
-<li>Stop obsessing over this host</li>
-<li>Disable notifications for this host: Tắt thông báo của host</li>
-<li>Send custom host notification: Gửi ngay lập tức thông tin cụ thể của host mail</li>
-<li>Schedule downtime for this host: Lệnh này sẽ lên kế hoạch cho thời gian downtime của host, trong thời gian này nagios sẽ ko gửi cảnh báo</li>
-<li>Schedule downtime for all services on this host: Lệnh này sẽ lên kế hoạch cho thời gian downtime của service</li>
-<li>Disable notification for all services on this host: Tắt thông báo cho tất cả dịch vụ trên host</li>
-<li>Enable notification for all services on this host: Bật thông báo cho tất cả dịch vụ trên host</li>
-<li>Schedule a check of all services on this host: Lên lịch kiểm tra cho tất cả dịch vụ trên host</li>
-<li>Disable checks of all services on this host: Tắt thông báo cho tất cả dịch vụ trên host</li>
-<li>Enable checks of all services on this host: Bật thông báo cho tất cả dịch vụ trên host</li>
-<li>Disable event handler for this host</li>
-<li>Disable flap detection for this host: Ngắt phát hiện trạng thái flap của host</li>
+<li><b>Locate host on map</b>: command này sẽ dẫn đến map của hệ thống giám sát</li>
+<li><b>Disable active checks of this host</b>: command này sẽ disable ngay lập tức active check host</li>
+<li><b>Re-schedule the next check of this host</b>: Thay đổi lịch trình lần check tiếp theo của host</li>
+<li><b>Submit passive check result for this host</b>: Lệnh này gửi kết quả check passive cho 1 máu chủ cụ thể</li>
+<li><b>Stop accepting passive checks for this host</b>: Ngừng chấp nhận check passive cho máy chủ này</li>
+<li><b>Stop obsessing over this host</b></li>
+<li><b>Disable notifications for this host</b>: Tắt thông báo của host</li>
+<li><b>Send custom host notification</b>: Gửi ngay lập tức thông tin cụ thể của host mail</li>
+<li><b>Schedule downtime for this host</b>: Lệnh này sẽ lên kế hoạch cho thời gian downtime của host, trong thời gian này nagios sẽ ko gửi cảnh báo</li>
+<li><b>Schedule downtime for all services on this host</b>: Lệnh này sẽ lên kế hoạch cho thời gian downtime của service</li>
+<li><b>Disable notification for all services on this host</b>: Tắt thông báo cho tất cả dịch vụ trên host</li>
+<li><b>Enable notification for all services on this host</b>: Bật thông báo cho tất cả dịch vụ trên host</li>
+<li><b>Schedule a check of all services on this host</b>: Lên lịch kiểm tra cho tất cả dịch vụ trên host</li>
+<li><b>Disable checks of all services on this host</b>: Tắt thông báo cho tất cả dịch vụ trên host</li>
+<li><b>Enable checks of all services on this host</b>: Bật thông báo cho tất cả dịch vụ trên host</li>
+<li><b>Disable event handler for this host</b></li>
+<li><b>Disable flap detection for this host</b>: Ngắt phát hiện trạng thái flap của host</li>
 </ul>
 
 
@@ -116,6 +117,7 @@ Các host command thực thi 1 lệnh đến host
 <li>Bảng thông tin chi tiết các dịch vụ đang được giám sát như tên dịch vụ, trạng thái dịch vụ, dịch vụ thuộc host nào...</li>
 </ul>
 
+<a name="241"></a>
 #### 2.4.1 Thông tin chi tiết của 1 service
 <img src="http://i.imgur.com/vmCApid.png">
 
@@ -127,6 +129,24 @@ Các host command thực thi 1 lệnh đến host
 <li>Mục 5: Thông tin cụ thể của service như trạng thái, thời gian check...</li>
 <li>Mục 6: Service command là những command thực thi 1 lệnh đến service như gửi mail cảnh báo, disable service...</li>
 </ul>
+
+<a name="242"></a>
+#### 2.4.2 Service command
+Các service command được sử dụng để thực thi 1 lệnh đến service đang giám sát
+<ul>
+<li><b>Disable active checks of this service</b>: ngắt trạng thái active check của 1 service</li>
+<li><b>Re-schedule the next check of this service</b>: lập lại thời gian check lần tiếp theo của service</li>
+<li><b>Submit passive check result for this service</b>: đưa ra kết quả passive check cho service này</li>
+<li><b>Stop accepting passive checks for this service</b>: ngừng chấp nhận passive check cho dịch vụ này</li>
+<li><b>Stop obsessing over this service</b>: Nagios ngừng quan sát dịch vụ này</li>
+<li><b>Disable notifications for this service</b>: ngắt thông báo đối với dịch vụ này</li>
+<li><b>Send custom service notification</b>: gửi thông báo về dịch vụ tới admin hoặc hệ thống giám sát</li>
+<li><b>Schedule downtime for this service</b>: lên lịch downtime cho dịch vụ này, trong thời gian này Nagios sẽ không gửi cảnh báo với dịch vụ này</li>
+<li><b>Disable event handler for this service</b>: tắt trình xử lý sự kiện cho dịch vụ này</li>
+<li><b>Disable flap detection for this service</b>: vô hiệu hóa phát hiện trạng thái flap cho dịch vụ này</li>
+</ul>
+
+
 
 
 
