cap nhat tai lieu

--- a/docs/lythuyet-nagios/2.Dashboard.md
+++ b/docs/lythuyet-nagios/2.Dashboard.md
@@ -8,6 +8,7 @@
 	- [2.3 Hosts](#22)
 		- [2.3.1 Thông tin cụ thể của host](#231)
 		- [2.3.2 Host command](#232)
+		- [2.3.3 Thông tin về trạng thái host](#233)
 	- [2.4 Services](#24)
 		- [2.4.1 Thông tin chi tiết của 1 service](#241)
 		- [2.4.2 Service command](#242)
@@ -108,6 +109,35 @@ Các host command thực thi 1 lệnh đến host
 <li><b>Disable event handler for this host</b></li>
 <li><b>Disable flap detection for this host</b>: Ngắt phát hiện trạng thái flap của host</li>
 </ul>
+
+<a name="233"></a>
+#### 2.3.3 Thông tin về trạng thái host
+
+Khi ta click vào một host cụ thể sẽ hiện ra 1 bảng thông tin như sau
+
+<img src="http://i.imgur.com/uyRcJLA.png">
+
+| Thông số | Thông tin | Ý nghĩa |
+|----------|-----------|---------|
+| Host Status | UP(for 8d 12h 33m 13s) | Trạng thái UP/DOWN của host và thời gian UP/DOWN |
+| Status Information | PING OK - Packet loss = 0%, RTA = 0.57 ms | Trạng thái ping, phần trăm gói tin ping bị mất |
+| Performance Data | rta=0.572000ms;3000.000000;5000.000000;0.000000 pl=0%;80;100;0 | Dữ liệu thể hiện như rta, pl |
+| Current Attempt | 1/5  (HARD state) | Số lần Nagios thực hiện check |
+| Last Check Time | 03-31-2017 16:50:03 | Thời gian mà lần check cuối cùng diễn ra |
+| Check Type | ACTIVE | Các loại check mà Nagios sử dụng để check ACTIVE/PASSIVE |
+| Check Latency / Duration | Kiểm tra latency của host trong 1 khoảng thời gian | 
+| Next Scheduled Active Check | 03-31-2017 17:20:27 | Lịch trình cho lần check tiếp theo |
+| Last State Change | 03-23-2017 04:11:07 | Thời gian diễn ra lần thay đổi trạng thái cuối cùng |
+| Last Notification | 03-23-2017 04:11:07 (notification 0) | Lần cảnh báo cuối cùng và số cảnh báo |
+| Is This Host Flapping? | NO (0.00% state change) | Host có đang ở trong trạng thái flapping hay không, phần trăm trạng thái thay đổi |
+| In Scheduled Downtime | NO | Host có đang trong trạng thái downtime theo lịch trình không |
+| Last Update | 03-31-2017 17:22:59  ( 0d 0h 0m 1s ago) | Thời gian diễn ra lần update cuối cùng của host |
+| Active Checks | ENABLED | Trạng thái của active check |
+| Passive Checks | ENABLED | Trạng thái của passive check | 
+| Obsessing | ENABLED | Trạng thái của Obsessing |
+| Notifications | ENABLED | Thông báo cho host đang ở trong trạng thái nào |  
+| Event Handler | ENABLED | Kiểm soát các sự kiện diễn ra |
+| Flap Detection | ENABLED | Phát hiện trạng thái flap |
 
 
 <a name="24"></a>
