Rà soát tài liệu

--- a/docs/thuchanh-nagios/4.Monitor-MySQL.md
+++ b/docs/thuchanh-nagios/4.Monitor-MySQL.md
@@ -7,6 +7,7 @@
     - [ 2.1. Chuẩn bị ](#2.1)
     - [ 2.2. Cài đặt Plugin](#2.2)
     - [ 2.3. Thêm thông tin host và giám sát ](#2.3)
+    
 <a name="1"></a>
 ### 1. Thông tin host MySQL
 
@@ -50,11 +51,12 @@ systemctl restart mysql
 GRANT usage ON *.* TO 'checker'@'192.168.100.196' IDENTIFIED BY '123';
 ```
 
-- `nagios` : Tên của user dùng cho icinga2 có thể truy xuất vào DB
+- `checker` : Tên của user dùng cho nagios có thể truy xuất vào DB
 - `123` : Mật khẩu của `checker` (Tùy chọn)
 - `192.168.100.196` : Địa chỉ IP của Nagios Server
 
 Như vậy là ta đã hoàn thành công việc ở host DB.
+
 <a name="2.2"></a>
 #### 2.2. Cài đặt Plugin
 
@@ -105,6 +107,7 @@ cd /usr/local/nagios/libexec/
 Kết quả trả về có dạng, cho biết plugin hoạt động ổn định:
 
 <img src="../../images/test-plugin-mysql.png" />
+
 <a name="2.3"></a>
 #### 2.3 Thêm thông tin host và giám sát
 
