cap nhat tai lieu

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -1,17 +1,25 @@
 # Cấu hình cảnh báo Nagios qua mail
 
 # Mục lục:
-- [1. Cấu hình cảnh báo qua Gmail](#1)
-- [2. Cấu hình cảnh báo qua mail domain](#2)
-- [3. Gửi cảnh báo theo ngưỡng đã đặt ra](#3)
-- [4. Tài liệu tham khảo](#4)
+- [1. Tính năng gửi cảnh báo qua email](#1)
+- [2. Cấu hình cánh báo qua Gmail](#2)
+- [3. Cấu hình cảnh báo qua mail domain](#3)
+- [4. Gửi cảnh theo host hoặc dịch vụ](#4)
+- [5. Tài liệu tham khảo](#5)
 
 ----------------------------------------------
 
 Lưu ý: Chọn 1 trong 2 cách (gmail & mail domain)để cấu hình gửi mail cảnh báo
 
 <a name="1"></a>
-## 1. Cấu hình cánh báo qua Gmail
+## 1. Tính năng gửi cảnh báo qua email
+Trong thực tế, người quản trị viên không phải lúc nào cũng có thể ngồi theo dõi và nắm bắt các hoạt động của hệ thống qua giao diện giám sát. Bởi vậy bất cứ hệ thống giám sát nào cũng cần cung cấp các chức năng thông báo về tình trạng của hệ thống qua các phương tiện truyền thông. Nagios cũng cấp tính năng thông báo các sự kiện xảy ra qua phương tiện truyền thông là email. Bài viết này sẽ cung cấp 2 cách để cấu hình gửi email thông báo đó là gửi qua Gmai hoặc qua mail domain
+
+Trong bài viết này, tất cả các bước cấu hình đều thực hiện trên Nagios Sever sử dụng hệ điều hành Centos 7. Tham khảo cài đặt Nagios trên Centos 7 tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
+
+
+<a name="2"></a>
+## 2. Cấu hình cánh báo qua Gmail
 
 - Cài đặt gói mail Postfix
 ```sh
@@ -50,8 +58,8 @@ echo "This is a test." | mail -s "test message" trimq212@gmail.com
 <img src="http://i.imgur.com/tponCE8.png">
 
 
-<a name="2"></a>
-## 2. Cấu hình cảnh báo qua mail domain
+<a name="3"></a>
+## 3. Cấu hình cảnh báo qua mail domain
 
 - Tải gói mail postfix
 ```sh
@@ -105,8 +113,8 @@ echo "This is a test." | mail -s "test message" tri.maiquoc@meditech.vn
 <img src="http://i.imgur.com/en1FOgO.png">
 
 
-<a name="3"></a>
-## 3. Gửi cảnh báo theo ngưỡng đã đặt ra
+<a name="4"></a>
+## 4. Gửi cảnh báo theo host hoặc dịch vụ
 
 - Thêm các thông tin để liên lạc trong file `/usr/local/nagios/etc/objects/contacts.cfg`
 ```sh
@@ -189,8 +197,8 @@ service ssh stop
 
 <img src="http://i.imgur.com/lulFsEU.png">
 
-<a name="4"></a>
-## 4. Tài liệu tham khảo
+<a name="5"></a>
+## 5. Tài liệu tham khảo
 
 - https://access.redhat.com/documentation/en-US/Red_Hat_Storage/3/html/Console_Administration_Guide/Configuring_Nagios_to_Send_Mail_Notifications.html
 
