cap nhat tai lieu

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -4,7 +4,9 @@
 - [1. Tính năng gửi cảnh báo qua email](#1)
 - [2. Cấu hình cánh báo qua Gmail](#2)
 - [3. Cấu hình cảnh báo qua mail domain](#3)
-- [4. Gửi cảnh theo host hoặc dịch vụ](#4)
+- [4. Gửi cảnh báo khi có sự cố](#4)
+	- [4.1 Gửi cảnh báo khi dịch vụ down](#41)
+	- [4.2 Gửi cảnh báo theo ngưỡng](#42)
 - [5. Tài liệu tham khảo](#5)
 
 ----------------------------------------------
@@ -114,7 +116,7 @@ echo "This is a test." | mail -s "test message" tri.maiquoc@meditech.vn
 
 
 <a name="4"></a>
-## 4. Gửi cảnh báo theo host hoặc dịch vụ
+## 4. Gửi cảnh báo khi có sự cố
 
 - Thêm các thông tin để liên lạc trong file `/usr/local/nagios/etc/objects/contacts.cfg`
 ```sh
@@ -175,9 +177,10 @@ define service{
 /etc/init.d/nagios restart
 ```
 
-<img src="http://i.imgur.com/E4TDgP1.png">
 
-### Thử nghiệm giám sát cảnh báo dịch vụ:
+
+<a name="41"></a>
+### 4.1 Gửi cảnh báo khi dịch vụ down
 
 - Trên máy client, stop dịch vụ ssh
 
@@ -196,6 +199,9 @@ service ssh stop
 - Khi khởi động lại dịch vụ ssh. Bản tin recovery báo trạng thái OK
 
 <img src="http://i.imgur.com/lulFsEU.png">
+
+
+### 4.2 Gửi cảnh báo theo ngưỡng
 
 <a name="5"></a>
 ## 5. Tài liệu tham khảo
