cap nhat tai lieu email-alert

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -202,6 +202,45 @@ service ssh stop
 
 
 ### 4.2 Gửi cảnh báo theo ngưỡng
+Cơ chế cảnh báo theo ngưỡng được đặt ra, khi dịch vụ cần giám sát vượt quá ngưỡng cho phép thì Nagios Core sẽ gửi cảnh báo đến người quản trị. Sử dụng cơ chế giám sát NRPE để thực hiện. Tham khảo cài đặt NRPE tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/3.Setup-NagiosNRPE.md)
+
+#### Thực hiện trên client
+
+- Chỉnh sửa file cấu hình Nagios trên client như sau:
+```sh
+vi /etc/nagios/nrpe.cfg
+```
+
+- Khai báo như sau
+```sh
+command[check_cpu]=/usr/lib/nagios/plugins/check_cpu.sh -w 70 -c 80
+```
+
+Trong đó:
+<ul>
+<li><b>command[check_cpu]</b>: khai báo tên của command để trên Nagios server có thể giao tiếp được với plugin trên client</li>
+<li><b>/usr/lib/nagios/plugins/check_cpu.sh</b>: đường dẫn để thực thi plugin</li>
+<li><b>-w 70 -c 80</b>: là ngưỡng cảnh báo đặt ra, ở đây trạng thái warning là trên 70% và trạng thái critical là trên 80%</li>
+
+- Thử kiểm tra ngưỡng với công cụ `iperf` trên client cần giám sát
+```sh
+iperf -s
+```
+
+- Sau đó cho các máy khác đẩy dữ liệu về để CPU của client cần giám sát hoạt động quá ngưỡng. Sử dụng `iperf`
+```sh
+iperf - t 300 -c <IP_client>
+```
+
+- Kết quả là CPU của máy client đang chạy vượt ngưỡng cho phép và gửi đi mail cảnh báo như sau:
+
+<img src="http://i.imgur.com/uRNJEJ9.png">
+
+- Sau khi ngừng thực hiện `iperf` client sẽ trở về trạng thái ổn định và gửi mail thông báo
+
+<img src="http://i.imgur.com/0I3coMG.png">
+
+
 
 <a name="5"></a>
 ## 5. Tài liệu tham khảo
