cap nhat tai lieu email-alert

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -1,9 +1,8 @@
-# Cấu hình cảnh báo Nagios qua mail
+# Cấu hình cảnh báo Nagios qua Gmail
 
 # Mục lục:
 - [1. Tính năng gửi cảnh báo qua email](#1)
 - [2. Cấu hình cánh báo qua Gmail](#2)
-- [3. Cấu hình cảnh báo qua mail domain](#3)
 - [4. Gửi cảnh báo khi có sự cố](#4)
 	- [4.1 Gửi cảnh báo khi dịch vụ down](#41)
 	- [4.2 Gửi cảnh báo theo ngưỡng](#42)
@@ -11,17 +10,22 @@
 
 ----------------------------------------------
 
-Lưu ý: Chọn 1 trong 2 cách (gmail & mail domain)để cấu hình gửi mail cảnh báo
+Đây là hướng dẫn gửi mail cảnh báo qua Gmail, tham khảo cách gửi mail qua Email Domain tại [đây]()
 
 <a name="1"></a>
 ## 1. Tính năng gửi cảnh báo qua email
-Trong thực tế, người quản trị viên không phải lúc nào cũng có thể ngồi theo dõi và nắm bắt các hoạt động của hệ thống qua giao diện giám sát. Bởi vậy bất cứ hệ thống giám sát nào cũng cần cung cấp các chức năng thông báo về tình trạng của hệ thống qua các phương tiện truyền thông. Nagios cũng cấp tính năng thông báo các sự kiện xảy ra qua phương tiện truyền thông là email. Bài viết này sẽ cung cấp 2 cách để cấu hình gửi email thông báo đó là gửi qua Gmai hoặc qua mail domain
-
-Trong bài viết này, tất cả các bước cấu hình đều thực hiện trên Nagios Sever sử dụng hệ điều hành Centos 7. Tham khảo cài đặt Nagios trên Centos 7 tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
+Trong thực tế, người quản trị viên không phải lúc nào cũng có thể ngồi theo dõi và nắm bắt các hoạt động của hệ thống qua giao diện giám sát. Bởi vậy bất cứ hệ thống giám sát nào cũng cần cung cấp các chức năng thông báo về tình trạng của hệ thống qua các phương tiện truyền thông. Nagios cũng cấp tính năng thông báo các sự kiện xảy ra qua phương tiện truyền thông là email. Bài viết này sẽ cung cấp cách gửi mail cảnh báo qua Gmail
 
 
 <a name="2"></a>
 ## 2. Cấu hình cánh báo qua Gmail
+
+### Bước 1: Cài đặt Nagios Core
+Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. Tham khảo cài đặt Nagios Core:
+[Cài đặt Nagios Core trên Centos 7](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
+
+
+### Bước 2: Cấu hình email cảnh báo qua Gmail:
 
 - Cài đặt gói mail Postfix
 ```sh
@@ -52,6 +56,8 @@ vi /etc/postfix/sasl_passwd
 [smtp.gmail.com]:587 username:password
 ```
 
+### Bước 3: Gửi email để test thử
+ 
 - Gửi mail test 
 ```sh
 echo "This is a test." | mail -s "test message" trimq212@gmail.com
@@ -60,63 +66,9 @@ echo "This is a test." | mail -s "test message" trimq212@gmail.com
 <img src="http://i.imgur.com/tponCE8.png">
 
 
-<a name="3"></a>
-## 3. Cấu hình cảnh báo qua mail domain
-
-- Tải gói mail postfix
-```sh
-yum -y install postfix cyrus-sasl-plain mailx
-```
-
-- Chỉnh sửa file cấu hình. Thêm vào những dòng sau
-```sh
-vi /etc/postfix/main.cf 
-
-
-relayhost =
-sender_dependent_relayhost_maps = hash:/etc/postfix/relayhost_maps
-smtp_sasl_auth_enable = yes
-smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd
-smtp_sender_dependent_authentication = yes
-smtp_sasl_security_options = noanonymous
-#smtp_sasl_mechanism_filter = AUTH LOGIN
-sender_canonical_maps = hash:/etc/postfix/sender_canonical
-smtp_sasl_tls_security_options =
-```
-
-- Chỉnh sửa file cấu hình. Thêm thông tin về email và domain
-```sh
-vi /etc/postfix/relayhost_maps
-
-email  [domain]
-```
-
-- Tạo 1 file và thêm thông số
-```sh
-vi /etc/postfix/sasl_passwd 
-
-
-domain  username:password
-```
-
-- Cấu hình và phân quyền cho thư mục
-```sh
-postmap /etc/postfix/sasl_passwd
-chown root:postfix /etc/postfix/sasl_passwd*
-chmod 640 /etc/postfix/sasl_passwd*
-systemctl reload postfix
-```
-
-- Gửi mai để test
-```sh
-echo "This is a test." | mail -s "test message" tri.maiquoc@meditech.vn
-```
-
-<img src="http://i.imgur.com/en1FOgO.png">
-
-
 <a name="4"></a>
 ## 4. Gửi cảnh báo khi có sự cố
+
 
 - Thêm các thông tin để liên lạc trong file `/usr/local/nagios/etc/objects/contacts.cfg`
 ```sh
