--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -4,8 +4,8 @@
 - [1. Tính năng gửi cảnh báo qua email](#1)
 - [2. Cấu hình cánh báo qua Gmail](#2)
 - [3. Gửi cảnh báo khi có sự cố](#3)
-	- [4.1 Gửi cảnh báo khi dịch vụ down](#31)
-	- [4.2 Gửi cảnh báo theo ngưỡng](#32)
+	- [3.1 Gửi cảnh báo khi dịch vụ down](#31)
+	- [3.2 Gửi cảnh báo theo ngưỡng](#32)
 - [4. Tài liệu tham khảo](#4)
 
 ----------------------------------------------
@@ -20,12 +20,12 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="2"></a>
 ## 2. Cấu hình cánh báo qua Gmail
 
-### Bước 1: Cài đặt Nagios Core
+#### Bước 1: Cài đặt Nagios Core
 Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. Tham khảo cài đặt Nagios Core:
 [Cài đặt Nagios Core trên Centos 7](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
 
 
-### Bước 2: Cấu hình email cảnh báo qua Gmail:
+#### Bước 2: Cấu hình email cảnh báo qua Gmail:
 
 - Cài đặt gói mail Postfix
 ```sh
@@ -56,7 +56,7 @@ vi /etc/postfix/sasl_passwd
 [smtp.gmail.com]:587 username:password
 ```
 
-### Bước 3: Gửi email để test thử
+#### Bước 3: Gửi email để test thử
  
 - Gửi mail test 
 ```sh
@@ -68,6 +68,8 @@ echo "This is a test." | mail -s "test message" trimq212@gmail.com
 
 <a name="4"></a>
 ## 4. Gửi cảnh báo khi có sự cố
+
+#### Bước 1: Tạo thông tin liên lạc để gửi cảnh báo
 
 - Thêm các thông tin để liên lạc trong file `/usr/local/nagios/etc/objects/contacts.cfg`
 ```sh
@@ -133,12 +135,15 @@ define service{
 <a name="41"></a>
 ### 4.1 Gửi cảnh báo khi dịch vụ down
 
+#### Bước 1:Ngắt dịch vụ đang chạy
+
 - Trên máy client, stop dịch vụ ssh
 
 ```sh
 service ssh stop
 ```
 
+#### Bước 2: Xem thông tin về dịch vụ trên dashboard và kiểm tra email cảnh báo
 - Thông tin trên dashboard
 
 <img src="http://i.imgur.com/PiZI9vC.png">
@@ -147,6 +152,7 @@ service ssh stop
 
 <img src="http://i.imgur.com/fOF5odG.png">
 
+#### Bước 3: Khởi động lại dịch vụ
 - Khi khởi động lại dịch vụ ssh. Bản tin recovery báo trạng thái OK
 
 <img src="http://i.imgur.com/lulFsEU.png">
@@ -155,7 +161,7 @@ service ssh stop
 ### 4.2 Gửi cảnh báo theo ngưỡng
 Cơ chế cảnh báo theo ngưỡng được đặt ra, khi dịch vụ cần giám sát vượt quá ngưỡng cho phép thì Nagios Core sẽ gửi cảnh báo đến người quản trị. Sử dụng cơ chế giám sát NRPE để thực hiện. Tham khảo cài đặt NRPE tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/3.Setup-NagiosNRPE.md)
 
-#### Thực hiện trên client
+#### Bước 1: Thực hiện trên client
 
 - Chỉnh sửa file cấu hình Nagios trên client như sau:
 ```sh
@@ -173,16 +179,20 @@ Trong đó:
 <li><b>/usr/lib/nagios/plugins/check_cpu.sh</b>: đường dẫn để thực thi plugin</li>
 <li><b>-w 70 -c 80</b>: là ngưỡng cảnh báo đặt ra, ở đây trạng thái warning là trên 70% và trạng thái critical là trên 80%</li>
 
+
+#### Bước 2: Test thử ngưỡng trên client
 - Thử kiểm tra ngưỡng với công cụ `iperf` trên client cần giám sát
 ```sh
 iperf -s
 ```
 
-- Sau đó cho các máy khác đẩy dữ liệu về để CPU của client cần giám sát hoạt động quá ngưỡng. Sử dụng `iperf`
+#### Bước 3: Trên các máy server khác 
+- Trên các máy khác đẩy dữ liệu về để CPU của client cần giám sát hoạt động quá ngưỡng. Sử dụng `iperf`. Nên sử dụng từ 3 đến 4 server để đẩy về host client đang giám sát 
 ```sh
 iperf - t 300 -c <IP_client>
 ```
 
+#### Bước 3: Kiểm chứng kết quả
 - Kết quả là CPU của máy client đang chạy vượt ngưỡng cho phép và gửi đi mail cảnh báo như sau:
 
 <img src="http://i.imgur.com/uRNJEJ9.png">
