cap nhat tai lieu

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -20,7 +20,9 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="2"></a>
 ## 2. Cấu hình cánh báo qua Gmail
 
-#### Bước 1: Cài đặt Nagios Core
+### Thực hiện trên Nagios Server
+
+#### Bước 1: Cài đặt Nagios Core 
 Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. Tham khảo cài đặt Nagios Core:
 [Cài đặt Nagios Core trên Centos 7](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
 
@@ -135,7 +137,7 @@ define service{
 <a name="41"></a>
 ### 4.1 Gửi cảnh báo khi dịch vụ down
 
-#### Bước 1:Ngắt dịch vụ đang chạy
+#### Bước 1: Ngắt dịch vụ đang chạy trên client
 
 - Trên máy client, stop dịch vụ ssh
 
@@ -152,7 +154,7 @@ service ssh stop
 
 <img src="http://i.imgur.com/fOF5odG.png">
 
-#### Bước 3: Khởi động lại dịch vụ
+#### Bước 3: Khởi động lại dịch vụ trên client
 - Khi khởi động lại dịch vụ ssh. Bản tin recovery báo trạng thái OK
 
 <img src="http://i.imgur.com/lulFsEU.png">
