cap nhat tai lieu

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -20,7 +20,7 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="2"></a>
 ## 2. Cấu hình cánh báo qua Gmail
 
-### Thực hiện trên Nagios Server
+### Thực hiện các bước này trên Nagios Server
 
 #### Bước 1: Cài đặt Nagios Core 
 Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. Tham khảo cài đặt Nagios Core:
