cap nhat tai lieu email-alert

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -20,7 +20,7 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="2"></a>
 ## 2. Cấu hình cánh báo qua Gmail
 
-### Thực hiện các bước này trên Nagios Server
+### Thực hiện các bước sau trên Nagios Server
 
 #### Bước 1: Cài đặt Nagios Core 
 Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. Tham khảo cài đặt Nagios Core:
@@ -68,8 +68,10 @@ echo "This is a test." | mail -s "test message" trimq212@gmail.com
 <img src="http://i.imgur.com/tponCE8.png">
 
 
-<a name="4"></a>
-## 4. Gửi cảnh báo khi có sự cố
+<a name="3"></a>
+## 3. Gửi cảnh báo khi có sự cố
+
+### Thực hiện các bước sau trên Nagios server
 
 #### Bước 1: Tạo thông tin liên lạc để gửi cảnh báo
 
@@ -108,6 +110,8 @@ define contact{
 <ul>
 <li>d: DOWN, cảnh báo khi host rơi vào trạng thái down</li>
 </ul>
+
+#### Bước 2: Cấu hình giám sát localhost
 	
 - Thêm thông tin để gửi mail cảnh báo
 ```sh
@@ -134,8 +138,10 @@ define service{
 
 
 
-<a name="41"></a>
-### 4.1 Gửi cảnh báo khi dịch vụ down
+<a name="31"></a>
+### 3.1 Gửi cảnh báo khi dịch vụ down
+
+### Thực hiện các bước sau trên client
 
 #### Bước 1: Ngắt dịch vụ đang chạy trên client
 
@@ -160,8 +166,11 @@ service ssh stop
 <img src="http://i.imgur.com/lulFsEU.png">
 
 
-### 4.2 Gửi cảnh báo theo ngưỡng
+<a name="32"></a>
+### 3.2 Gửi cảnh báo theo ngưỡng
 Cơ chế cảnh báo theo ngưỡng được đặt ra, khi dịch vụ cần giám sát vượt quá ngưỡng cho phép thì Nagios Core sẽ gửi cảnh báo đến người quản trị. Sử dụng cơ chế giám sát NRPE để thực hiện. Tham khảo cài đặt NRPE tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/3.Setup-NagiosNRPE.md)
+
+### Thực hiện các bước sau trên client
 
 #### Bước 1: Thực hiện trên client
 
