--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -161,6 +161,11 @@ service ssh stop
 <img src="http://i.imgur.com/fOF5odG.png">
 
 #### Bước 3: Khởi động lại dịch vụ trên client
+
+```sh
+service ssh start
+```
+
 - Khi khởi động lại dịch vụ ssh. Bản tin recovery báo trạng thái OK
 
 <img src="http://i.imgur.com/lulFsEU.png">
