cap nhat tai lieu

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -23,8 +23,9 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 ### Thực hiện các bước sau trên Nagios Server
 
 #### Bước 1: Cài đặt Nagios Core 
-Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. Tham khảo cài đặt Nagios Core:
-[Cài đặt Nagios Core trên Centos 7](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
+Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. 
+
+Tham khảo cài đặt Nagios Core tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
 
 
 #### Bước 2: Cấu hình email cảnh báo qua Gmail:
@@ -111,25 +112,7 @@ define contact{
 <li>d: DOWN, cảnh báo khi host rơi vào trạng thái down</li>
 </ul>
 
-#### Bước 2: Cấu hình giám sát localhost
-	
-- Thêm thông tin để gửi mail cảnh báo
-```sh
-vi /usr/local/nagios/etc/objects/localhost.cfg
-
-
-# Define a service to check HTTP on the local machine.
-# Disable notifications for this service by default, as not all users may have HTTP enabled.
-
-define service{
-        use                             local-service         ; Name of service template to use
-        host_name                       localhost
-        service_description             HTTP
-        check_command                   check_http
-        notifications_enabled           0
-        contacts                        nagiosadmin
-        }
-```
+#### Bước 2: Khởi động lại dịch vụ
 
 - Khởi động lại dịch vụ
 ```sh
