--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -97,7 +97,10 @@ define contact{
         }
 ```
 
-- service_notification_options: trạng thái sẽ gửi cảnh báo của service
+
+#### Giải thích các thông số cấu hình:
+
+- <b>service_notification_options</b>: trạng thái sẽ gửi cảnh báo của service
 <ul>
 <li>w: warning</li>
 <li>u: unknown service</li>
@@ -107,7 +110,7 @@ define contact{
 <li>s: gửi cảnh báo khi dịch vụ downtime trong lịch trình</li>
 </ul>
 	
-- host_notification_options: trạng thái sẽ gửi cảnh báo của host 
+- <b>host_notification_options</b>: trạng thái sẽ gửi cảnh báo của host 
 <ul>
 <li>d: DOWN, cảnh báo khi host rơi vào trạng thái down</li>
 </ul>
