Chỉnh sửa lỗi chính tả cho các tài liệu

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -23,7 +23,7 @@
 
 <img src="../../images/topo.png" />
 
-#### Bảng phân IP cho các host
+#### Bảng phân hoạch IP cho các máy chủ
 
 <img src="../../images/IP-Planning.png" />
 
@@ -38,7 +38,7 @@ yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinet
 <a name="1.2"></a>
 #### 1.2 Tạo user cho Nagios
 
-Tạo user `nagios`
+Tạo user `nagios` trên máy chủ cài đặt Nagios Server
 
 ```sh
 useradd -m -s /bin/bash nagios
