--- a/docs/thuchanh-nagios/1.Setup-Ubuntu-16.04.md
+++ b/docs/thuchanh-nagios/1.Setup-Ubuntu-16.04.md
@@ -22,16 +22,6 @@
 <a name="1.1"></a>
 #### 1.1 Chuẩn bị môi trường cài đặt
 
-#### Mô hình cài đặt giám sát các host như sau:
-
-<img src="../../images/topo.png" />
-
-#### Bảng phân IP cho các host
-
-<img src="../../images/IP-Planning.png" />
-
-Link docs: https://goo.gl/yOim1o
-
 Để có thể cài đặt và sử dụng được Nagios Core, chúng ta phải cài đặt một số thư viện và các gói dịch vụ đi kèm.
 
 ```
@@ -78,7 +68,7 @@ curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nr
 Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin.
 
 ```
-mkdir ~/nagios
+cd ~/nagios
 tar xzf nagios-4.3.1.tar.gz
 cd nagios-4.3.1
 
@@ -122,7 +112,7 @@ ufw reload
 Biên dịch các plugin
 
 ```sh
-mkdir ~/nagios
+cd ~/nagios
 tar xzf nagios-plugins-2.2.0.tar.gz
 cd nagios-plugins-2.2.0
 
