--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -1,6 +1,6 @@
 ## Monitor RabbitMQ trong nagios
 
-**Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS không thành công!**
+**Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS 7 không thành công!**
 
 ### Nội dung
 
@@ -9,6 +9,7 @@
     - [ 2.1. Chuẩn bị ](#2.1)
     - [ 2.2. Cài đặt Plugin](#2.2)
     - [ 2.3. Thêm thông tin host và giám sát ](#2.3)
+    
 <a name="1"></a>
 ### 1. Thông tin host RabbitMQ
 
@@ -18,6 +19,7 @@ IP: 192.168.100.198
 Hostname: node1
 Service: RabbitMQ
 ```
+
 <a name="2"></a>
 ### 2. Chuẩn bị và cài đặt Plugin
 
@@ -94,7 +96,7 @@ define command {
 }
 define command {
  command_name check_rabbitmq_cluster 
- command_line $USER1$/rabbitmq/check_rabbitmq_cluster -H $ARG1$ --port=$ARG2$ -u $ARG3$ -p $ARG4$ -w 1 -c 2
+ command_line $USER1$/rabbitmq/check_rabbitmq_cluster -H $ARG1$ --port=$ARG2$ -u $ARG3$ -p $ARG4$
 }
 define command {
  command_name check_rabbitmq_connections
