cap nhat tai lieu setup email alert

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -2,15 +2,22 @@
 
 # Mục lục:
 - [1. Tính năng gửi cảnh báo qua email](#1)
-- [2. Cấu hình cánh báo qua Gmail](#2)
-- [3. Gửi cảnh báo khi có sự cố](#3)
-	- [3.1 Gửi cảnh báo khi dịch vụ down](#31)
-	- [3.2 Gửi cảnh báo theo ngưỡng](#32)
-- [4. Tài liệu tham khảo](#4)
+- [2. Topology lab & IP Planning](#2)
+	- [2.1. Topology lab](#21)
+	- [2.2. IP Planning](#22)
+- [3. Các bước cấu hình để chuẩn bị gửi cảnh báo qua email](#3)
+	- [3.1. Cấu hình gửi cảnh báo qua gmail](#31)
+	- [3.2. Kiểm tra gửi email thử](#32)
+- [4. Gửi cảnh báo khi có sự cố](#4)
+	- [4.1. Gửi cảnh báo khi dịch vụ ssh down](#41)
+	- [4.2. Gửi cảnh báo khi dịch vụ http down](#42)
+	- [4.3. Gửi cảnh báo khi máy chủ off hoặc restart](#43)
+- [5. Khác](#5)
+- [6. Tài liệu tham khảo](#6)
+	
 
 ----------------------------------------------
 
-Đây là hướng dẫn gửi mail cảnh báo qua Gmail, tham khảo cách gửi mail qua Email Domain tại [đây]()
 
 <a name="1"></a>
 ## 1. Tính năng gửi cảnh báo qua email
@@ -18,30 +25,44 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 
 
 <a name="2"></a>
-## 2. Cấu hình cánh báo qua Gmail
+## 2. Topology lab & IP Planning
 
-### Thực hiện các bước sau trên Nagios Server
+<b>Lưu ý:</b> Để thực hành bài lab gửi email cảnh báo này, bạn bắt buộc phải thực hiện xong cài đặt Nagios Core trên Nagios Server và các dịch vụ ssh, http trên Client theo mô hình ở bài lab này trên CentOS7 <link>
 
-#### Bước 1: Cài đặt Nagios Core 
-Đầu tiên chúng ta phải cài đặt thành công hệ thống Nagios Core trước khi cấu hình gửi mail cảnh báo. 
+Đối với bài lab này cần ít nhất là 02 máy chủ: Nagios Server và Web
 
-Tham khảo cài đặt Nagios Core tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
+<a name="21"></a>
+### 2.1. Topology lab
+
+<img src="">
+
+<a name="22"></a>
+### 2.2. IP Planning
+
+| Hostname | OS | IP | Dịch vụ |
+|----------|----|----|---------|
+| Nagios Server | Centos 7 | 192.168.100.125 | Nagios Core |
+| Web (client) | Ubuntu 14 | 192.168.100.150 | HTTP, SSH |
 
 
-#### Bước 2: Cấu hình email cảnh báo qua Gmail:
+<a name="3"></a>
+## 3. Các bước cấu hình để chuẩn bị gửi cảnh báo qua email
 
-- Cài đặt gói mail Postfix
+Trong bài viết này tôi sẽ hướng dẫn cấu hình gửi cảnh báo qua Gmail
+
+<a name="31"></a>
+### 3.1. Cấu hình gửi cảnh báo qua Gmail:
+
+#### Các bước sau đây được thực hiện trên Nagios Server
+
+- Bước 1: Cài đặt gói mail postfix
+
 ```sh
 yum -y install postfix cyrus-sasl-plain mailx
 ```
 
-- Khởi động lại dịch vụ
-```sh
-systemctl restart postfix
-systemctl enable postfix
-```
+- Bước 2: Cấu hình dịch vụ mail postfix
 
-- Chỉnh sửa file cấu hình `/etc/postfix/main.cf`
 ```sh
 relayhost = [smtp.gmail.com]:587
 smtp_use_tls = yes
@@ -52,31 +73,51 @@ smtp_sasl_security_options = noanonymous
 smtp_sasl_tls_security_options = noanonymous
 ```
 
-- Tạo 1 file `/etc/postfix/sasl_passwd` để khai báo các thông số tài khoản mail xác thực
+- Bước 3: Khởi động lại dich vụ
+
+```sh
+systemctl restart postfix
+systemctl enable postfix
+```
+
+- Bước 4: Tạo 1 file để khai báo các thông số tài khoản mail xác thực
+
 ```sh
 vi /etc/postfix/sasl_passwd
 
 [smtp.gmail.com]:587 username:password
 ```
 
-#### Bước 3: Gửi email để test thử
- 
-- Gửi mail test 
+- Bước 5: Thiết lập chế độ less secure của Gmail
+
+Trong 1 số trường hợp cần phải tắt chế độ hạn chế truy cập từ các ứng dụng không an toàn cho tài khoản gmail của bạn. Tham khảo link sau:
+
+https://myaccount.google.com/lesssecureapps
+
+
+<a name="32"></a>
+### 3.2. Kiểm tra gửi email thử
+
+- Bước 1: Thực hiện câu lệnh sau trên Nagios Server
+
 ```sh
-echo "This is a test." | mail -s "test message" trimq212@gmail.com
+echo "This is a test." | mail -s "test message" maiquoctri2102@gmail.com
 ```
 
-<img src="http://i.imgur.com/tponCE8.png">
+- Bước 2: Kiểm tra trên hòm thư của Gmail
+Nếu nhận được email như sau thì các bước cấu hình dịch vụ mail đã thành công
 
+<img src="">
 
-<a name="3"></a>
-## 3. Gửi cảnh báo khi có sự cố
+<a name="4"></a>
+## 4. Gửi cảnh báo khi có sự cố
+Đầu tiên phải thực hiện tạo thông tin liên lạc để Nagios biết được là phải gửi cảnh báo tới đâu khi hệ thống gặp vấn đề
 
-### Thực hiện các bước sau trên Nagios server
+#### Thực hiện các bước sau trên Nagios Server
 
-#### Bước 1: Tạo thông tin liên lạc để gửi cảnh báo
+- Bước 1: Thêm các thông tin liên lạc của Nagios
+Ta sẽ tạo các thông tin liên lạc trong file `/usr/local/nagios/etc/objects/contacts.cfg`
 
-- Thêm các thông tin để liên lạc trong file `/usr/local/nagios/etc/objects/contacts.cfg`
 ```sh
 vi /usr/local/nagios/etc/objects/contacts.cfg
 
@@ -97,116 +138,130 @@ define contact{
         }
 ```
 
+#### Ý nghĩa của các tham số khai báo trên
 
-#### Giải thích các thông số cấu hình:
-
-- <b>service_notification_options</b>: trạng thái sẽ gửi cảnh báo của service
 <ul>
+<li>service_notification_options: trạng thái sẽ gửi cảnh báo của service</li>
 <li>w: warning</li>
 <li>u: unknown service</li>
 <li>c: critical</li>
 <li>r: recovery service (trạng thái OK)</li>
 <li>f: cảnh báo khi service khởi động và tắt FLAPPING</li>
 <li>s: gửi cảnh báo khi dịch vụ downtime trong lịch trình</li>
-</ul>
-	
-- <b>host_notification_options</b>: trạng thái sẽ gửi cảnh báo của host 
-<ul>
+<li>host_notification_options: trạng thái sẽ gửi cảnh báo của host</li>
 <li>d: DOWN, cảnh báo khi host rơi vào trạng thái down</li>
 </ul>
 
-#### Bước 2: Khởi động lại dịch vụ
+- Bước 2: Khởi động lại dịch vụ
 
-- Khởi động lại dịch vụ
 ```sh
 /etc/init.d/nagios restart
 ```
 
+Những bước cấu hình ở trên là để Nagios có thể tự động gửi mail khi hệ thống gặp sự cố. Trong trường hợp dịch vụ hoặc host được giám sát của tôi bị down thì Nagios phải gửi được email cho tôi để khắc phục sự cố.
 
+Để kiểm chứng cho việc này, tôi sẽ thử kiểm tra bằng cách ngắt dịch vụ (ssh, http) và shutdown host đang giám sát. Lưu ý là trên client tôi đã giám sát được dịch vụ ssh và http như đã nói ở đầu bài viết
 
-<a name="31"></a>
-### 3.1 Gửi cảnh báo khi dịch vụ down
+<a name="41"></a>
+### 4.1. Gửi cảnh báo khi dịch vụ ssh down
+Như đã nói ở trên, sau đây tôi sẽ thử lab email cảnh báo với dịch vụ ssh.
 
-### Thực hiện các bước sau trên client
-
-#### Bước 1: Ngắt dịch vụ đang chạy trên client
-
-- Trên máy client, stop dịch vụ ssh
+- Bước 1: Trên máy Client, thực hiện dừng dịch vụ ssh trên Client
 
 ```sh
 service ssh stop
 ```
 
-#### Bước 2: Xem thông tin về dịch vụ trên dashboard và kiểm tra email cảnh báo
-- Thông tin trên dashboard
+- Bước 2: Kiểm tra dịch vụ trên dashboard Nagios
+Sau khi thực hiện ngừng dịch vụ ssh trên máy client, quay lại dashboard của Nagios để kiểm tra nếu trên dashboard thông báo như sau nghĩa là dịch vụ đã bị dừng
 
-<img src="http://i.imgur.com/PiZI9vC.png">
+<img src="">
 
-- Email cảnh báo
+- Bước 3: Kiểm tra hòm thư Gmail 
+Kiểm tra hòm thư Gmail để xem Nagios có tự động gửi mail cảnh báo đến không. Ở đây tôi đã nhận được mail cảnh báo đến
 
-<img src="http://i.imgur.com/fOF5odG.png">
+<img src="">
 
-#### Bước 3: Khởi động lại dịch vụ trên client
+- Bước 4: Khởi động lại dịch vụ trên Client
+Sau khi nhận được email cảnh báo, tôi sẽ khởi động lại dịch vụ để thử xem Nagios có gửi email bản tin Recovery
 
 ```sh
 service ssh start
 ```
 
-- Khi khởi động lại dịch vụ ssh. Bản tin recovery báo trạng thái OK
+-Bước 5: Kiểm tra hoạt động của dịch vụ trên dashboard
 
-<img src="http://i.imgur.com/lulFsEU.png">
+Sau khi thực hiện khởi động dịch vụ, kiểm tra trên dashboard
 
+<img src="">
 
-<a name="32"></a>
-### 3.2 Gửi cảnh báo theo ngưỡng
-Cơ chế cảnh báo theo ngưỡng được đặt ra, khi dịch vụ cần giám sát vượt quá ngưỡng cho phép thì Nagios Core sẽ gửi cảnh báo đến người quản trị. Sử dụng cơ chế giám sát NRPE để thực hiện. Tham khảo cài đặt NRPE tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/3.Setup-NagiosNRPE.md)
+- Bước 6: Kiểm tra email Recovey
 
-### Thực hiện các bước sau trên client
+Sau khi dịch vụ đã hoạt động trở lại, Nagios sẽ thông báo 1 bản tin cho người quản trị trạng thái của dịch vụ đó. Kiểm tra hòm thư để xác nhận
 
-#### Bước 1: Thực hiện trên client
+<img src="">
 
-- Chỉnh sửa file cấu hình Nagios trên client như sau:
+Như vậy là Nagios đã có thể gửi email cảnh báo khi dịch vụ bị down. Để kiểm chứng thêm tôi sẽ lab với dịch vụ khác là web
+
+<a name="42"></a>
+### 4.2. Gửi cảnh báo khi dịch vụ http down
+
+Tương tự như dịch vụ ssh, tôi sẽ ngắt hoạt động của dịch vụ sau đó các bước làm sẽ giống như dịch vụ ssh
+
+- Bước 1: Tương tự ssh, trên client tôi sẽ ngắt hoạt động dịch vụ web
+
 ```sh
-vi /etc/nagios/nrpe.cfg
+service apache2 stop
 ```
 
-- Khai báo như sau
+- Bước 2: Kiểm tra trên dashboard của Nagios
+
+<img src="http://i.imgur.com/OuaOAcM.png">
+
+- Bước 3: Kiểm tra hòm thư Gmail
+
+<img src="http://i.imgur.com/Yz88LeW.png">
+
+- Bước 4: Khởi động lại dịch vụ
+
 ```sh
-command[check_cpu]=/usr/lib/nagios/plugins/check_cpu.sh -w 70 -c 80
+service apache2 start
 ```
 
-Trong đó:
-<ul>
-<li><b>command[check_cpu]</b>: khai báo tên của command để trên Nagios server có thể giao tiếp được với plugin trên client</li>
-<li><b>/usr/lib/nagios/plugins/check_cpu.sh</b>: đường dẫn để thực thi plugin</li>
-<li><b>-w 70 -c 80</b>: là ngưỡng cảnh báo đặt ra, ở đây trạng thái warning là trên 70% và trạng thái critical là trên 80%</li>
+- Bước 5: Kiểm tra trên dashboard 
 
+<img src="http://i.imgur.com/G3aYXWJ.png">
 
-#### Bước 2: Test thử ngưỡng trên client
-- Thử kiểm tra ngưỡng với công cụ `iperf` trên client cần giám sát
-```sh
-iperf -s
-```
+- Bước 6: Kiểm tra hòm thư Gmail
 
-#### Bước 3: Trên các máy server khác 
-- Trên các máy khác đẩy dữ liệu về để CPU của client cần giám sát hoạt động quá ngưỡng. Sử dụng `iperf`. Nên sử dụng từ 3 đến 4 server để đẩy về host client đang giám sát 
-```sh
-iperf - t 300 -c <IP_client>
-```
-
-#### Bước 3: Kiểm chứng kết quả
-- Kết quả là CPU của máy client đang chạy vượt ngưỡng cho phép và gửi đi mail cảnh báo như sau:
-
-<img src="http://i.imgur.com/uRNJEJ9.png">
-
-- Sau khi ngừng thực hiện `iperf` client sẽ trở về trạng thái ổn định và gửi mail thông báo
-
-<img src="http://i.imgur.com/0I3coMG.png">
+<img src="http://i.imgur.com/1LQJtgD.png">
 
 
 
-<a name="4"></a>
-## 4. Tài liệu tham khảo
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<a name="5">
+## 5. Khác
+
+
+<a name="6"></a>
+## 6. Tài liệu tham khảo
 
 - https://access.redhat.com/documentation/en-US/Red_Hat_Storage/3/html/Console_Administration_Guide/Configuring_Nagios_to_Send_Mail_Notifications.html
 
